--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,10 @@
 plugins {
     id 'java'
     id 'com.github.johnrengelman.shadow' version '4.0.4'
-    id 'net.kyori.blossom' version '1.1.0'
 }
 
 group = 'com.andre601'
-version = '1.0.0'
+version = new Version(major: 1, minor: 0, revision: 1)
 
 sourceCompatibility = 1.8
 
@@ -20,6 +19,15 @@ dependencies {
     implementation(group: 'org.spigotmc', name: 'spigot-api', version: '1.16.1-R0.1-SNAPSHOT')
 }
 
-blossom {
-    replaceToken 'VERSION', version
+class Version{
+    String major, minor, revision
+
+    static String getBuild(){
+        System.getenv("BUILD_NUMBER") ? "_" + System.getenv("BUILD_NUMBER") :
+                System.getProperty("BUILD_NUMBER") ? "_" + System.getProperty("BUILD_NUMBER") : ""
+    }
+
+    String toString(){
+        "$major.$minor.${revision}$build"
+    }
 }
