--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'com.andre601'
-version = new Version(major: 1, minor: 0, revision: 5)
+version = new Version(major: 1, minor: 1, revision: 0)
 
 sourceCompatibility = 1.8
 
@@ -12,11 +12,17 @@ repositories {
     mavenCentral()
     maven {url = 'http://repo.extendedclip.com/content/repositories/placeholderapi'}
     maven{ url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
+    maven{ url = 'https://rayzr.dev/repo/' }
 }
 
 dependencies {
     compileOnly(group: 'me.clip', name: 'placeholderapi', version: '2.10.4')
     compileOnly(group: 'org.spigotmc', name: 'spigot-api', version: '1.16.1-R0.1-SNAPSHOT')
+    compile(group: 'me.rayzr522', name: 'jsonmessage', version: '1.2.1')
+}
+
+shadowJar{
+    relocate('me.rayzr522', 'com.andre601.hexchat.dependencies')
 }
 
 class Version{
