--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: HexChat
 author: Andre_601
-version: '1.2.0'
+version: '1.3.0'
 
 api-version: '1.16'
 
@@ -40,6 +40,25 @@ permissions:
   hexchat.command.formats:
     default: op
     description: 'Gives access to /hexchat formats'
+  hexchat.color.all:
+    default: op
+    description: 'Allows the usage of color, formatting and hex color codes in messages.'
+    children: 
+      hexchat.color: true
   hexchat.color:
     default: op
+    description: 'Allows the usage of color, formatting and hex color codes in messages.'
+    children: 
+      hexchat.color.code: true
+      hexchat.color.hex.*: true
+  hexchat.color.code:
+    default: op
     description: 'Allows the usage of color and formatting codes in messages.'
+  hexchat.color.hex.*:
+    default: op
+    description: 'Allows the usage of all hex colors in messages.'
+    children: 
+      hexchat.color.hex: true
+  hexchat.color.hex:
+    default: op
+    description: 'Allows the usage of all hex colors in messages.'
