--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -58,7 +58,7 @@ console:
 #
 formats:
   #
-  # Each format name has to be a unique name that can be assigned through the permission chatpalette.format.<format>
+  # Each format name has to be a unique name that can be assigned through the permission hexchat.format.<format>
   # You need to keep one format called "default" that will be applied if the player doesn't have permission for any of
   # the other formats.
   #
