--- a/build.gradle
+++ b/build.gradle
@@ -4,27 +4,31 @@ plugins {
 }
 
 group = 'com.andre601'
-version = new Version(major: 1, minor: 3, revision: 0)
+version = new Version(major: 1, minor: 3, revision: 1)
 
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    maven {url = 'http://repo.extendedclip.com/content/repositories/placeholderapi'}
+    maven {url = 'http://repo.extendedclip.com/content/repositories/placeholderapi/'}
     maven{ url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
     maven{ url = 'https://rayzr.dev/repo/' }
+    maven{ url = 'https://repo.codemc.org/repository/maven-public' }
 }
 
 dependencies {
-    compileOnly(group: 'me.clip', name: 'placeholderapi', version: '2.10.4')
+    compileOnly(group: 'me.clip', name: 'placeholderapi', version: '2.10.9')
     compileOnly(group: 'org.spigotmc', name: 'spigot-api', version: '1.16.1-R0.1-SNAPSHOT')
-    compile(group: 'me.rayzr522', name: 'jsonmessage', version: '1.2.1')
-    compile(group: 'me.mattstudios.utils', name: 'matt-framework', version: '1.3')
+    
+    implementation(group: 'me.rayzr522', name: 'jsonmessage', version: '1.2.1')
+    implementation(group: 'me.mattstudios.utils', name: 'matt-framework', version: '1.3')
+    implementation(group: 'org.bstats', name: 'bstats-bukkit', version: '1.7')
 }
 
 shadowJar{
-    relocate('me.rayzr522', 'com.andre601.hexchat.dependencies')
-    relocate('me.mattstudios.utils', 'com.andre601.hexchat.dependencies')
+    relocate('me.rayzr522', 'com.andre601.hexchat.dependencies.json')
+    relocate('me.mattstudios.utils', 'com.andre601.hexchat.dependencies.command')
+    relocate('org.bstats', 'com.andre601.hexchat.dependencies.metrics')
 }
 
 class Version{
