--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'com.andre601'
-version = new Version(major: 1, minor: 3, revision: 1)
+version = new Version(major: 1, minor: 4, revision: 0)
 
 sourceCompatibility = 1.8
 
@@ -21,13 +21,15 @@ dependencies {
     compileOnly(group: 'org.spigotmc', name: 'spigot-api', version: '1.16.1-R0.1-SNAPSHOT')
     
     implementation(group: 'me.rayzr522', name: 'jsonmessage', version: '1.2.1')
-    implementation(group: 'me.mattstudios.utils', name: 'matt-framework', version: '1.3')
     implementation(group: 'org.bstats', name: 'bstats-bukkit', version: '1.7')
+    implementation(group: 'me.mattstudios.utils', name: 'matt-framework', version: '1.3')
+    implementation(group: 'me.mattstudios.utils', name: 'matt-framework-msg', version: '1.1')
 }
 
 shadowJar{
     relocate('me.rayzr522', 'com.andre601.hexchat.dependencies.json')
-    relocate('me.mattstudios.utils', 'com.andre601.hexchat.dependencies.command')
+    relocate('me.mattstudios.mf', 'com.andre601.hexchat.dependencies.command')
+    relocate('me.mattstudios.mfmsg', 'com.andre601.hexchat.dependencies.message')
     relocate('org.bstats', 'com.andre601.hexchat.dependencies.metrics')
 }
 
